[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-genesis"

[dependencies]
base64 = "0.12.3"
clap = "2.33.1"
serde = "1.0.130"
serde_json = "1.0.69"
serde_yaml = "0.8.21"
analog-clap-utils = { path = "../clap-utils", version = "=1.9.0" }
analog-cli-config = { path = "../cli-config", version = "=1.9.0" }
analog-entry = { path = "../entry", version = "=1.9.0" }
analog-ledger = { path = "../ledger", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-stake-program = { path = "../programs/stake", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
analog-vote-program = { path = "../programs/vote", version = "=1.9.0" }
tempfile = "3.2.0"

[[bin]]
name = "analog-genesis"
path = "src/main.rs"

[lib]
name = "analog_genesis"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
