[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-ledger-tool"

[dependencies]
bs58 = "0.4.0"
bytecount = "0.6.2"
clap = "2.33.1"
csv = "1.1.6"
dashmap = "4.0.2"
histogram = "*"
itertools = "0.10.1"
log = { version = "0.4.14" }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.69"
serde_yaml = "0.8.21"
analog-clap-utils = { path = "../clap-utils", version = "=1.9.0" }
analog-cli-output = { path = "../cli-output", version = "=1.9.0" }
analog-core = { path = "../core", version = "=1.9.0" }
analog-entry = { path = "../entry", version = "=1.9.0" }
analog-ledger = { path = "../ledger", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-measure = { path = "../measure", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-stake-program = { path = "../programs/stake", version = "=1.9.0" }
analog-storage-bigtable = { path = "../storage-bigtable", version = "=1.9.0" }
analog-transaction-status = { path = "../transaction-status", version = "=1.9.0" }
analog-version = { path = "../version", version = "=1.9.0" }
analog-vote-program = { path = "../programs/vote", version = "=1.9.0" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"

[target."cfg(unix)".dependencies]
signal-hook = "0.3.10"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
