[package]
authors = ["Analog Maintainers <maintainers@analog.foundation>"]
edition = "2018"
name = "analog-local-cluster"
description = "Blockchain, Rebuilt for Scale"
version = "1.9.0"
repository = "https://github.com/analog-labs/analog"
license = "Apache-2.0"
homepage = "https://analog.com/"
documentation = "https://docs.rs/analog-local-cluster"

[dependencies]
crossbeam-channel = "0.5"
itertools = "0.10.1"
gag = "1.0.0"
fs_extra = "1.2.0"
log = "0.4.14"
rand = "0.7.0"
rayon = "1.5.1"
analog-config-program = { path = "../programs/config", version = "=1.9.0" }
analog-core = { path = "../core", version = "=1.9.0" }
analog-client = { path = "../client", version = "=1.9.0" }
analog-download-utils = { path = "../download-utils", version = "=1.9.0" }
analog-entry = { path = "../entry", version = "=1.9.0" }
analog-gossip = { path = "../gossip", version = "=1.9.0" }
analog-ledger = { path = "../ledger", version = "=1.9.0" }
analog-logger = { path = "../logger", version = "=1.9.0" }
analog-runtime = { path = "../runtime", version = "=1.9.0" }
analog-sdk = { path = "../sdk", version = "=1.9.0" }
analog-stake-program = { path = "../programs/stake", version = "=1.9.0" }
analog-streamer = { path = "../streamer", version = "=1.9.0" }
analog-vote-program = { path = "../programs/vote", version = "=1.9.0" }
tempfile = "3.2.0"

[dev-dependencies]
assert_matches = "1.5.0"
serial_test = "0.5.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
